--- a/threat-assessment.html
+++ b/threat-assessment.html
@@ -7,12 +7,24 @@
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
   <style>
-    /* Scoped fixes for this page only */
+    /* ---- HARD FIXES (scoped to this page only) ---- */
     body.page-threat .hero,
     body.page-threat .hero::before,
     body.page-threat .hero::after { display:none !important; }
+    body.page-threat { background-image:none !important; }
     body.page-threat main.container { max-width: 1000px; }
-    /* tiles + progress (scoped) */
+
+    /* Header layout fallback so nav never stacks as bullets */
+    body.page-threat header .container { display:flex; align-items:center; justify-content:space-between; gap: 16px; }
+    body.page-threat header nav ul { list-style:none; display:flex; gap:18px; padding:0; margin:0; align-items:center; }
+    body.page-threat header nav ul li { margin:0; }
+    body.page-threat header a.logo { display:flex; align-items:center; gap:10px; text-decoration:none; }
+    body.page-threat header a.logo img { height:24px; width:auto; }
+
+    /* Active link hint (safe fallback if site CSS misses it) */
+    body.page-threat header nav a.active { text-decoration: underline; }
+
+    /* Tiles + progress (scoped) */
     .qa-section { margin: 1.25rem 0 1.1rem; }
     .qa-section h2 { margin: .25rem 0 .6rem; font-size: 1.05rem; }
     .tiles { display:grid; grid-template-columns: repeat(auto-fit, minmax(220px,1fr)); gap:12px; }
@@ -20,6 +32,7 @@
     .tile input { position:absolute; inset:0; opacity:0; pointer-events:none; }
     .tile:hover { border-color: color-mix(in oklab, currentColor 40%, rgba(255,255,255,.25)); }
     .tile.active { border-color: currentColor; background: color-mix(in oklab, currentColor 10%, transparent); box-shadow: 0 0 0 3px color-mix(in oklab, currentColor 25%, transparent); transform: translateY(-1px); }
+
     .progress-shell { position: sticky; top: 0; z-index: 40; backdrop-filter: blur(4px); }
     .progress-bar-bg { height: 6px; width: 100%; background: rgba(255,255,255,.12); }
     .progress-bar-fill { height: 6px; width: 0%; background: currentColor; transition: width .25s ease; }
@@ -29,7 +42,6 @@
 </head>
 <body class="page-threat">
 
-  <!-- Header copied structure / correct order / active link -->
   <header>
     <div class="container">
       <a href="index.html" class="logo">
@@ -178,7 +190,6 @@
 
   <script>
     // Tile behaviour + sticky progress + scoring
-
     document.addEventListener('click', function(e){
       const label = e.target.closest('.tile');
       if (!label) return;
