--- a/threat-assessment.html
+++ b/threat-assessment.html
@@ -39,6 +39,36 @@
     .progress-meta { font-size: .9rem; margin-top: .35rem; opacity: .85; }
     @media (max-width: 520px){ .tiles{ grid-template-columns:1fr; } }
   </style>
+
+  <style>
+    /* Page-scoped fixes */
+    body.page-threat .hero,
+    body.page-threat .hero::before,
+    body.page-threat .hero::after { display:none !important; }
+    body.page-threat { background-image:none !important; }
+    main.container { max-width: 1000px; }
+
+    /* Ensure nav horizontal consistently */
+    header nav ul { list-style: none; margin: 0; padding: 0; display: flex; gap: 14px; align-items: center; }
+    header nav ul li { margin: 0; }
+
+    /* Progress bar under header, no blur */
+    .progress-shell { position: sticky; top: 0; z-index: 20; background: transparent; }
+    .progress-bar-bg { height: 6px; width: 100%; background: rgba(255,255,255,.15); }
+    .progress-bar-fill { height: 6px; width: 0%; background: currentColor; transition: width .25s ease; }
+    .progress-meta { font-size: .9rem; margin-top: .35rem; opacity: .85; }
+
+    /* Tiles */
+    .qa-section { margin: 1.25rem 0 1.1rem; }
+    .qa-section h2 { margin: .25rem 0 .6rem; font-size: 1.05rem; }
+    .tiles { display:grid; grid-template-columns: repeat(auto-fit, minmax(240px,1fr)); gap:14px; }
+    .tile { position:relative; display:flex; align-items:center; justify-content:center; padding:14px; border-radius:14px; line-height:1.2; cursor:pointer; user-select:none; border:1px solid rgba(255,255,255,.25); transition: transform .06s ease, box-shadow .12s ease, border-color .12s ease, background .12s ease; text-align:center; }
+    .tile input { position:absolute; inset:0; opacity:0; pointer-events:none; }
+    .tile:hover { border-color: color-mix(in oklab, currentColor 40%, rgba(255,255,255,.25)); }
+    .tile.active { border-color: currentColor; background: color-mix(in oklab, currentColor 10%, transparent); box-shadow: 0 0 0 3px color-mix(in oklab, currentColor 25%, transparent); transform: translateY(-1px); }
+    @media (max-width: 520px){ .tiles{ grid-template-columns:1fr; } }
+  </style>
+
 </head>
 <body class="page-threat">
 
