Full site fix: global nav order + Threat header + progress

--- a/products.html
+++ b/products.html
@@ -67,12 +67,15 @@
         <img src="assets/logo.png" alt="CommsBlack Mobile logo" class="logo">
         <span>CommsBlack Mobile</span>
       </a>
-      <nav class="nav desktop-nav" aria-label="Primary">
-        <a href="threat-assessment.html">Threat Assessment</a><a href="index.html">Mission</a>
-        <a href="products.html" class="active">Products</a>
-        <a href="academy.html">Academy</a>
-        <a href="faqs.html">FAQ’s</a>
-        <a href="contact.html">Contact</a>
+      <nav>
+        <ul>
+          <li><a href="index.html">Mission</a></li>
+          <li><a href="threat-assessment.html">Threat Assessment</a></li>
+          <li><a class="active" href="products.html">Products</a></li>
+          <li><a href="academy.html">Academy</a></li>
+          <li><a href="faqs.html">FAQ's</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
       <div class="header-actions">
         <button class="theme-toggle" aria-pressed="false" title="Toggle dark/light" aria-label="Toggle dark or light theme">🌙</button>
