--- a/products.html
+++ b/products.html
@@ -5,9 +5,9 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/assets/css/style.css">
 <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-<script defer src="script.js"></script>
+<script defer src="/assets/js/script.js"></script>
 
   <meta name="description" content="Secure communication kits for privacy & freedom. Choose the kit that fits your lifestyle.">
 </head>
