--- a/404.html
+++ b/404.html
@@ -1,61 +1,11 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>Page Not Found — CommsBlack Mobile</title>
-  
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/assets/css/style.css">
-<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-<script defer src="/assets/js/script.js"></script>
+﻿---
+layout: default
+title: 404 — Page Not Found
+permalink: /404.html
+---
 
-  <meta name="description" content="404 error page for CommsBlack Mobile.">
-</head>
-<body>
-  
-<header>
-  <div class="container header-inner">
-    <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="CommsBlack Mobile logo" class="logo">
-      <span>CommsBlack Mobile</span>
-    </a>
-    <nav class="nav desktop-nav" aria-label="Primary">
-      <a href="index.html">Mission</a>
-      <a href="products.html">Products</a>
-      <a href="academy.html">Academy</a>
-      <a href="faqs.html">FAQ’s</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <div class="header-actions">
-      <button class="theme-toggle" aria-pressed="false" title="Toggle dark/light" aria-label="Toggle dark or light theme">🌙</button>
-      <button class="hamburger" aria-label="Open menu" aria-controls="mobileMenu" aria-expanded="false">
-        <span></span><span></span><span></span>
-      </button>
-    </div>
-  </div>
-  <div id="mobileMenu" class="mobile-menu" role="dialog" aria-modal="true" hidden>
-    <button class="close-btn" aria-label="Close menu" title="Close menu">&times;</button>
-    <nav class="mobile-nav" aria-label="Mobile Primary">
-      <ul>
-        <li><a href="index.html">Mission</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="academy.html">Academy</a></li>
-        <li><a href="faqs.html">FAQ’s</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-
-  <main class="container">
-    <h1>404 — Page Not Found</h1><p>The page you’re looking for doesn’t exist. <a href='index.html'>Return home</a>.</p>
-  </main>
-  
-<footer>
-  <div class="container">
-    <p>© 2025 CommsBlack Mobile. All rights reserved.</p>
-  </div>
-</footer>
-
-</body>
-</html>
+<main class="container">
+  <h1>404 — Page Not Found</h1>
+  <p>The page you’re looking for doesn’t exist.</p>
+  <p><a href="/threat-assessment.html" style="text-decoration:underline;">Go to Threat Assessment</a> or <a href="/">return home</a>.</p>
+</main>
